--- a/frontend/src/productcard/loginpage/login.css
+++ b/frontend/src/productcard/loginpage/login.css
@@ -1,5 +1,5 @@
 /* Basic Login Page Styles */
-body {
+/* body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
@@ -7,7 +7,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 .login-wrapper {
     background-color: white;
