--- a/frontend/src/productcard/loginpage/login.css
+++ b/frontend/src/productcard/loginpage/login.css
@@ -1,14 +1,11 @@
-/* Basic Login Page Styles */
-/* body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+
+.main-login{
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-} */
-
+}
 .login-wrapper {
     background-color: white;
     width: 350px;
