added check out and checkin feature

--- a/frontend/src/productcard/fulldesc.css
+++ b/frontend/src/productcard/fulldesc.css
@@ -1,6 +1,6 @@
-#edit , #delete, #back{
+#edit , #delete, #back, #checkout, #checkin{
     height: 40px;
-    width: 60px;
+    width: 100px;
     margin: 10px;
 }
 #edit{
@@ -8,6 +8,12 @@
 }
 #delete{
     background-color: red;
+}
+#checkout{
+    background-color: blue;
+}
+#checkin{
+    background-color: brown;
 }
 
 .full-desc-container{
