--- a/frontend/src/productcard/fulldesc.css
+++ b/frontend/src/productcard/fulldesc.css
@@ -21,4 +21,8 @@
      display: flex;
      justify-content: center;
      align-items: center;
+     height: 500px;
+     width: 900px;
+     border-radius: 30px;
 }
+
